--- a/app/src/main/res/layout/activity_catch_entry_metric.xml
+++ b/app/src/main/res/layout/activity_catch_entry_metric.xml
@@ -11,22 +11,32 @@
 
     <!-- Page Label -->
     <TextView
-        android:id="@+id/txtTodaysLog"
+        android:id="@+id/txtTodaysLogCms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="26dp"
-        android:text="@string/todays_log_centimeters"
+        android:text="todays fishing log"
         android:textColor="@color/black"
-        android:background="@color/softlock_green"
         android:textAllCaps="true"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/txtTodaysLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00.0 Cms"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtTodaysLogCms" />
 
     <!-- btn Goto Set Up Page -->
     <Button
