--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -81,13 +81,11 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
         android:contentDescription="@string/letter_of_color_clip_for_color_blind"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
-        android:textStyle="bold"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnStartFishing"
@@ -99,12 +97,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
-        android:textStyle="bold"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtColorLetter1"
@@ -116,12 +112,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
-        android:textStyle="bold"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtColorLetter2"
@@ -133,12 +127,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
-        android:textStyle="bold"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtColorLetter3"
@@ -150,12 +142,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
-        android:textStyle="bold"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtColorLetter4"
@@ -167,12 +157,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
-        android:textStyle="bold"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtColorLetter5"
@@ -385,12 +373,11 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
-        android:background="@color/grey"
+        android:background="@color/third_variant"
         android:textAlignment="center"
-        android:text=""
+        android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
-        android:textStyle="bold"
+        android:textSize="25sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintWidth_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
@@ -402,12 +389,11 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
-        android:text=""
+        android:background="@color/third_variant"
         android:textAlignment="center"
+        android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
-        android:textStyle="bold"
+        android:textSize="25sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/secondDecWeight"
         app:layout_constraintTop_toBottomOf="@id/firstDecWeight"
@@ -419,12 +405,11 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
-        android:text=""
+        android:background="@color/third_variant"
         android:textAlignment="center"
+        android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
-        android:textStyle="bold"
+        android:textSize="25sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
         app:layout_constraintTop_toBottomOf="@id/secondDecWeight"
@@ -436,12 +421,11 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
-        android:background="@color/grey"
+        android:background="@color/third_variant"
         android:textAlignment="center"
-        android:text=""
+        android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
-        android:textStyle="bold"
+        android:textSize="25sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintWidth_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
@@ -453,12 +437,11 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/grey"
-        android:text=""
+        android:background="@color/third_variant"
         android:textAlignment="center"
+        android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
-        android:textStyle="bold"
+        android:textSize="25sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
         app:layout_constraintTop_toBottomOf="@id/fourthDecWeight"
@@ -470,21 +453,22 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
-        android:background="@color/grey"
+        android:background="@color/third_variant"
         android:textAlignment="center"
-        android:text=""
+        android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
-        android:textStyle="bold"
+        android:textSize="25sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintWidth_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
         app:layout_constraintTop_toBottomOf="@id/fifthDecWeight" />
 
+
     <TextView
         android:id="@+id/total_weightView"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/weight_lbs_ozs"
         android:textAlignment="center"
@@ -493,17 +477,15 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.379"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sixthRealWeight"
-        android:layout_marginTop="10dp"/>
-
+        app:layout_constraintTop_toBottomOf="@id/sixthRealWeight" />
 
     <TextView
         android:id="@+id/totalRealWeight"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginEnd="25dp"
         android:background="@color/clip_white"
         android:gravity="center"
         android:textAlignment="gravity"
@@ -520,7 +502,7 @@
         android:layout_width="wrap_content"
         android:layout_height="72dp"
         android:textScaleX="0.3"
-        android:text="Lbs"
+        android:text="@string/lbs"
         android:gravity="bottom"
         android:textColor="@color/black"
         android:textSize="60sp"
@@ -549,7 +531,7 @@
         android:layout_width="wrap_content"
         android:layout_height="72dp"
         android:textScaleX="0.3"
-        android:text="Ozs"
+        android:text="@string/ozs"
         android:gravity="bottom"
         android:textColor="@color/black"
         android:textSize="60sp"
@@ -560,32 +542,34 @@
     <Button
         android:id="@+id/btnMenu"
         android:layout_width="wrap_content"
-        android:layout_height="68dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:background="@color/secondary"
-        android:text="SetUp"
+        android:text="@string/setup"
         android:textAlignment="gravity"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.11"
         app:layout_constraintHorizontal_bias="0.103"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/totalRealWeight"
         app:layout_constraintWidth_percent="0.25" />
 
     <Button
-        android:id="@+id/btnResetCatch"
+        android:id="@+id/btnMainPg"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/Log_orange"
-        android:text="Reset-?"
-        app:layout_constraintStart_toEndOf="@id/btnMenu"
-        app:layout_constraintBottom_toBottomOf="@id/btnMenu" />
-
-
+        android:layout_height="55dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
+        android:background="@color/secondary"
+        android:text="@string/main_page"
+        android:textAlignment="gravity"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_percent="0.11"
+        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintTop_toBottomOf="@id/totalRealWeight"
+        app:layout_constraintWidth_percent="0.25"  />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
