--- a/app/src/main/res/layout/list_item_catch.xml
+++ b/app/src/main/res/layout/list_item_catch.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -6,28 +5,18 @@
     android:padding="8dp"
     android:gravity="center_vertical">
 
-
-            <!-- Catch Details -->
-    <TextView
-        android:id="@+id/catchText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:padding="6dp" />
-
-            <!-- Edit Icon -->
     <ImageView
-        android:id="@+id/editIcon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@android:drawable/ic_menu_edit"
-        android:contentDescription="@string/edit_catch"
-        android:padding="6dp"
-        android:clickable="true"
-        android:focusable="true"/>
+        android:id="@+id/imgSpecies"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="12dp"
+        android:scaleType="centerInside"
+        android:contentDescription="Fish species image" />
 
-
+    <TextView
+        android:id="@+id/txtCatchInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="#000000"/>
 </LinearLayout>
-
