--- a/app/src/main/res/layout/popup_length_entry_metric.xml
+++ b/app/src/main/res/layout/popup_length_entry_metric.xml
@@ -20,13 +20,14 @@
             android:id="@+id/txtPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enter_weight_centimeters"
+            android:text="@string/enter_catch_details_cm"
             android:textSize="25sp"
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:background="@color/Log_blue_secondary"
+            android:background="@color/clip_yellow"
+            android:padding="5dp"
             android:layout_marginBottom="10dp"   />
 
         <!-- Species Spinner -->
@@ -34,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="left">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -115,26 +116,37 @@
 
         <!-- SAVE CATCH  btn -->
 
-        <Button
-            android:id="@+id/btnSaveCatch"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/Log_green"
-            android:text="@string/save_catch"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/Log_green_secondary"
+                android:text="Cancel"
+                android:layout_marginEnd="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnSaveLength"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/Log_green"
+                android:text="Save Catch"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
         <!-- CANCEL btn  -->
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/Log_green_secondary"
-            android:text="@string/cancel"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
