--- a/app/src/main/res/layout/popup_weight_entry_tour_lbs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_tour_lbs.xml
@@ -15,17 +15,20 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <!-- Popup Title -->
+
+        <!-- Species Spinner -->
         <TextView
             android:id="@+id/txtPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Enter Catch Details  - Lbs Ozs -"
-            android:textColor="@color/black"
+            android:textColor="@color/clip_white"
+            android:background="@color/clip_green"
             android:textSize="22sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:padding="5dp"/>
 
-        <!-- Species Spinner -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -39,8 +42,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginStart="-50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="30dp"
                 android:text="Select Species"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -51,8 +54,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginStart="20dp"
-                android:text="Select Color"
+                android:layout_marginStart="40dp"
+                android:text="@string/select_clip_color"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
@@ -64,6 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -71,7 +75,7 @@
                 android:id="@+id/spinnerSpeciesPopUp"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginEnd="30dp"
                 android:background="@color/lite_grey"
                 android:spinnerMode="dialog"
                 android:textColor="@color/black"
@@ -82,13 +86,12 @@
                 android:id="@+id/clipColorSpinner"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
-                android:entries="@array/clip_colors"
-                android:layout_marginStart="15dp"
                 android:background="@color/lite_grey"
+                android:entries="@array/clip_colors"
                 android:spinnerMode="dialog"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -132,11 +135,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:hint="0-15 Oz"
-                android:textColorHint="@color/lite_grey"
                 android:inputType="number"
                 android:textColor="@color/black"
+                android:textColorHint="@color/lite_grey"
                 android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView10"
@@ -160,23 +163,27 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <Button
-                android:id="@+id/btnSaveWeight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:text="Save"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:textStyle="bold"/>
-
-            <Button
                 android:id="@+id/btnCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/btn_outline_green"
                 android:text="Cancel"
-                android:textSize="20sp"
+                android:layout_marginEnd="10dp"
                 android:textColor="@color/black"
-                android:textStyle="bold"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnSaveWeight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/btn_outline_blue"
+                android:text="Save Catch"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </LinearLayout>
